--- a/casos-prestamos/frontend/package.json
+++ b/casos-prestamos/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
-    "react-signature-canvas": "^1.1.0-alpha.2"
+    "react-signature-canvas": "^1.1.0-alpha.2",
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
