--- a/casos-prestamos/frontend/package.json
+++ b/casos-prestamos/frontend/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@types/react-signature-canvas": "^1.0.7",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "next": "^15.3.2",
     "pg": "^8.11.3",
     "react": "18.2.0",
